# kodegen-workspace

./: .claude  .gitignore  .mcp.json  Cargo.toml  justfile
.claude/: SYSTEM_PROMPT.md  settings.local.json
.claude/commands/: all1.md  all2.md  all3.md  aug.md  codereview.md  qa.md  read.md  task.md  ttt.md
.github/workflows/: windows.yml
docs/: WINDOWS.md
docs/blog.augustfeng.app/.search_index/: .managed.json  meta.json
docs/de.leapcell.io/: manifest.json
docs/de.leapcell.io/.search_index/: .managed.json  meta.json
docs/developer.apple.com/.search_index/: .managed.json  meta.json
docs/docs.docker.com/: manifest.json
docs/docs.docker.com/.search_index/: .managed.json  meta.json
docs/docs.rs/: manifest.json
docs/docs.rs/.search_index/: .managed.json  meta.json
docs/github.com/: manifest.json
docs/github.com/.search_index/: .managed.json  .tmpAkjXeH  meta.json
docs/learn.microsoft.com/: manifest.json
docs/learn.microsoft.com/.search_index/: .managed.json  meta.json
docs/microsoft.github.io/.search_index/: .managed.json  meta.json
docs/ops-class.org/.search_index/: .managed.json  meta.json
docs/rust-exercises.com/: manifest.json
docs/rust-exercises.com/.search_index/: .managed.json  meta.json
docs/specifications.freedesktop.org/: manifest.json
docs/specifications.freedesktop.org/.search_index/: .managed.json  meta.json
docs/ss64.com/.search_index/: .managed.json  meta.json
docs/stackoverflow.com/.search_index/: .managed.json  meta.json
docs/svartalf.info/.search_index/: .managed.json  meta.json
docs/tech-champion.com/: manifest.json
docs/tech-champion.com/.search_index/: .managed.json  meta.json
docs/tokio.rs/.search_index/: .managed.json  meta.json
docs/tuttlem.github.io/.search_index/: .managed.json  meta.json
docs/unix.stackexchange.com/.search_index/: .managed.json  meta.json
docs/wpollock.com/: manifest.json
docs/wpollock.com/.search_index/: .managed.json  meta.json
docs/www.advancedinstaller.com/: manifest.json
docs/www.advancedinstaller.com/.search_index/: .managed.json  meta.json
docs/www.baeldung.com/.search_index/: meta.json
docs/www.emmet-gray.com/: manifest.json
docs/www.emmet-gray.com/.search_index/: .managed.json  meta.json
docs/www.freedesktop.org/: manifest.json
docs/www.freedesktop.org/.search_index/: .managed.json  meta.json
docs/www.man7.org/.search_index/: .managed.json  meta.json
docs/www.nerdfonts.com/: manifest.json
docs/www.nerdfonts.com/.search_index/: .managed.json  meta.json
docs/www.slingacademy.com/: manifest.json
scripts/: check_paths.sh  windows_build_check.ps1
scripts/platform_audit/: Cargo.toml
scripts/platform_audit/src/: main.rs
